@@ -52,6 +52,6 @@ CMN_CSRCS	= up_allocateheap.c up_assert.c up_blocktask.c up_copystate.c \
 
 CHIP_ASRCS	= qemu_saveusercontext.S qemu_fullcontextrestore.S qemu_vectors.S
 CHIP_CSRCS	= qemu_handlers.c qemu_idle.c qemu_irq.c qemu_lowputc.c \
-			  qemu_lowsetup.c qemu_timerisr.c
+			  qemu_lowsetup.c qemu_serial.c qemu_timerisr.c
 
 # Configuration-dependent QEMU files
