@@ -1519,4 +1519,10 @@
 	  advantage that it runs in the actual NuttX tasking environment (the
 	  mm/mm_test.c only runs in a PC simulation environment).
 	* drivers/mmcsd_sdio.c/h -- Several corrections submitted by Uros Platise.
+	* arch/x86 - Provide support for x86 architectures.  Support for the i486
+	  architecture under QEMU is provided under arch/x86/include/i486,
+	  arch/x86/include/qemu, arch/x86/src/i486, and arch/x86/src/qemu.
+	* configs/qemu-i486 - "Board" support configurations for verifying the QEME
+	  i486 port.
+
 
